# Arch-Sense

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  arch-sense  arch-sense.install  arch-sense.service
.github/scripts/: generate_aur_files.sh
.github/workflows/: aur-update.yml
client/: Cargo.toml
client/src/: main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  hardware.rs  keyboard.rs  main.rs
docs/superpowers/plans/: 2026-04-28-arch-sense-ui-redesign.md
docs/superpowers/specs/: 2026-04-28-arch-sense-ui-redesign.md
kernel/: .Module.symvers.cmd  Makefile  linuwu_sense.service
kernel/src/: .linuwu_sense.ko.cmd  .linuwu_sense.mod.o.cmd  .linuwu_sense.o.cmd  linuwu_sense.c  linuwu_sense.ko  linuwu_sense.mod.c
shared/src/: lib.rs
src/: app.rs  cli.rs  commands.rs  config.rs  constants.rs  hardware.rs  lib.rs  main.rs  models.rs  permissions.rs  rgb_settings.rs  system.rs  theme.rs  ui.rs
