[package]
name = "arch-sense"
version = "1.3.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
